mobile meta, move jquery

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Mapbox DC Eats 😋</title>
-  <script src='https://code.jquery.com/jquery-1.11.0.min.js'></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href='https://api.mapbox.com/mapbox.js/v3.0.1/mapbox.css' rel='stylesheet' />
 </head>
 <style>
@@ -35,6 +35,7 @@
   <div class="c-map" id="map"></div>
 </body>
 <script src='https://api.mapbox.com/mapbox.js/v3.0.1/mapbox.js'></script>
+<script src='https://code.jquery.com/jquery-1.11.0.min.js'></script>
 <script>
   L.mapbox.accessToken = 'pk.eyJ1IjoiYWxseXBhbGFuemkiLCJhIjoiY2l3ZG1ndmJmMDZybjJvb2J3MTJzazQwaSJ9.yXhNtLrHo7t5xBBcmfSxHA';
   var map = L.mapbox.map('map', 'mapbox.streets');
